--- a/studio/package.json
+++ b/studio/package.json
@@ -15,11 +15,16 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/color-input": "^3.1.0",
+    "@sanity/icons": "^2.6.0",
+    "@sanity/orderable-document-list": "^1.1.0",
     "@sanity/vision": "^3.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.18.1",
+    "sanity-plugin-mux-input": "^2.2.3",
+    "sanity-plugin-vercel-deploy": "^3.3.4",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
