--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@mux/mux-player-react": "^2.2.0",
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.7.1",
     "@styled-jsx/plugin-sass": "^4.0.2",
